modify some info.

--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>js aop</title>
+	<title>js aop test page</title>
 	<script type="text/javascript" src="../aop.js"></script>
 <script type="text/javascript">
 	/**
@@ -46,7 +46,7 @@
 
 	
 	
-	// rmmove 
+	// rmmove aop function 
 	h1.remove();
 	h4.remove();
 
